delete button alignments fix

--- a/src/app/components/view-house/view-house.component.scss
+++ b/src/app/components/view-house/view-house.component.scss
@@ -113,6 +113,13 @@
   margin-right: auto;
 }
 
+.delete-button {
+  margin: 20px;
+  width: 200px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .avatar {
   img {
     height: 150px;
