--- a/src/app/components/view-land/view-land.component.scss
+++ b/src/app/components/view-land/view-land.component.scss
@@ -111,6 +111,13 @@
   margin-right: auto;
 }
 
+.delete-button {
+  margin: 20px;
+  width: 200px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .avatar {
   img {
     height: 150px;
